k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: embediq
  labels:
    app: embediq
spec:
  type: ClusterIP
  selector:
    app: embediq
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
